--- a/src/main/resources/com/example/demo/dataScreen.fxml
+++ b/src/main/resources/com/example/demo/dataScreen.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<ScrollPane maxHeight="600.0" maxWidth="1000.0" minHeight="600.0" minWidth="1000.0" prefHeight="600.0" prefWidth="1000.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18">
+<ScrollPane maxHeight="600.0" maxWidth="1000.0" minHeight="600.0" minWidth="1000.0" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <content>
       <GridPane fx:id="gridGeneral" focusTraversable="true" maxHeight="598.0" maxWidth="998.0" minHeight="598.0" minWidth="998.0" prefHeight="598.0" prefWidth="998.0">
         <columnConstraints>
