--- a/src/main/resources/com/example/demo/dataScreen.fxml
+++ b/src/main/resources/com/example/demo/dataScreen.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -34,6 +35,7 @@
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints maxHeight="163.0" minHeight="0.0" prefHeight="27.0" vgrow="SOMETIMES" />
@@ -44,7 +46,7 @@
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Niveaux Finis :" GridPane.columnIndex="1" />
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Indices utilisés :" GridPane.columnIndex="2" />
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre d'essais :" GridPane.columnIndex="3" />
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Temps :" GridPane.columnIndex="4" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Temps (en secondes) :" GridPane.columnIndex="4" />
                   <GridPane GridPane.rowIndex="1">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -181,11 +183,13 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                   </GridPane>
-                  <Button fx:id="retour" mnemonicParsing="false" onAction="#comeBack" text="Retour" GridPane.columnIndex="4" GridPane.rowIndex="2">
+                  <Button mnemonicParsing="false" onAction="#comeBack" text="Retour" GridPane.columnIndex="5" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                      <GridPane.margin>
-                        <Insets left="120.0" />
+                        <Insets />
                      </GridPane.margin>
                   </Button>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Niveaux Bonus :" GridPane.columnIndex="5" />
+                  <ListView fx:id="nivBonus" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
                </children>
                <padding>
                   <Insets bottom="5.0" />
