--- a/src/main/resources/com/example/demo/homeScreen.fxml
+++ b/src/main/resources/com/example/demo/homeScreen.fxml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
 <ScrollPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="538.0" prefWidth="602.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.MenuAPointController">
-   <content>
-      <ListView fx:id="listeBoutons" prefHeight="450.0" prefWidth="546.0" />
-   </content>
    <padding>
       <Insets left="20.0" right="20.0" top="20.0" />
    </padding>
+   <content>
+      <SplitPane prefHeight="483.0" prefWidth="557.0">
+         <items>
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="512.0" minWidth="10.0" prefWidth="449.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="455.0" minHeight="10.0" prefHeight="455.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="234.0" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <ListView fx:id="listeBoutons" prefHeight="200.0" prefWidth="200.0" />
+                  <Button mnemonicParsing="false" onAction="#loadNewFile" prefHeight="25.0" prefWidth="110.0" text="Nouveau Fichier" GridPane.rowIndex="1" />
+               </children>
+            </GridPane>
+         </items>
+      </SplitPane>
+   </content>
 </ScrollPane>
